# arborium-rt

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES  THIRD_PARTY_NOTICES.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml  test.yml
crates/theme-codegen/: Cargo.toml
crates/theme-codegen/src/: main.rs
langs/group-willow/markdown-inline/def/: arborium.yaml
langs/group-willow/markdown-inline/def/queries/: highlights.scm
patches/arborium/: 0002-inject-markdown-inline.patch  0003-kotlin-highlights.scm-rewrite-chain-method-patterns-.patch  0003-wire-add-timed_out-to-ParseResult-plugin-runtime-enf.patch  0004-swift-highlights.scm-rewrite-chain-method-and-chain-.patch
scripts/: arborium-rt  bootstrap.sh  release
src/: abi.rs  highlight.rs  lib.rs  registry.rs
