[package]
name = "arborium-rt-theme-codegen"
version = "0.0.0"
edition = "2024"
publish = false
description = "Host-native helper that renders arborium theme TOMLs to CSS via arborium-theme. Invoked at build time by the arborium-rt dev CLI; never shipped."

[[bin]]
name = "arborium-rt-theme-codegen"
path = "src/main.rs"

[dependencies]
arborium-theme = { path = "../../third_party/arborium/crates/arborium-theme", default-features = false, features = ["toml"] }
serde_json = "1"
